# raglearn

./: .dockerignore  .env.example  .gitignore  Makefile  README.md
assets/: README.md
backend/: README.md  pyproject.toml
backend/src/finrag/: __init__.py
backend/src/finrag/api/: deps.py  main.py  sse.py
backend/src/finrag/api/routes/: chat.py  config.py  health.py  ingest.py  monitor.py  query.py  sessions.py  sources.py
backend/src/finrag/core/: __init__.py  bootstrap.py  config.py  errors.py  logging.py  registry.py  types.py  wiring.py
backend/src/finrag/core/interfaces/: __init__.py  crosscutting.py  generation.py  harness.py  ingestion.py  retrieval.py  storage.py
backend/src/finrag/cost/: __init__.py  local.py
backend/src/finrag/eval/: __init__.py  __main__.py  golden.py  leaderboard.py  metrics.py  runner.py  synthetic.py
backend/src/finrag/generation/: __init__.py  ollama.py  token_stream.py
backend/src/finrag/harness/: __init__.py  citation_verify.py
backend/src/finrag/ingestion/: __init__.py  bundle.py  consumer.py  detect.py  docling_backend.py  embedding.py  events.py  monitor.py  object_store.py  router.py  xbrl_extract.py
backend/src/finrag/ingestion/chunking/: assemble.py  context.py  fixed.py  gate.py  ids.py  metrics.py  parse.py  pdf_structure.py  pdfium_structure.py  router.py  sec_html.py  semantic.py  structure.py  tokenizer.py
backend/src/finrag/ingestion/identity/: __init__.py  cover.py  india.py  llm_classifier.py  rules.py  us.py
backend/src/finrag/observability/: __init__.py  langfuse_exporter.py  monitor_emitter.py  redis_exporter.py  tracer.py
backend/src/finrag/retrieval/: __init__.py  answer.py  composite_qa.py  fusing_retriever.py  fusion.py  lexical.py  query_service.py  query_transform.py  reconcile.py  reranker.py  retriever.py  router.py  sql_guard.py  structured_qa.py  text_to_sql.py  understanding.py
backend/src/finrag/security/: __init__.py  input_guard.py  output_guard.py  output_stream.py  pii.py
backend/src/finrag/stores/: __init__.py  duckdb_structured.py  postgres_chat.py  postgres_monitor.py  postgres_structured.py  qdrant_vector.py
backend/src/raglearn/: __init__.py
backend/src/raglearn/api/: __init__.py  deps.py  main.py  sse.py
backend/src/raglearn/api/routes/: config.py  health.py
backend/src/raglearn/core/: bootstrap.py  config.py  errors.py  registry.py  types.py  wiring.py
backend/src/raglearn/core/interfaces/: __init__.py  crosscutting.py  generation.py  harness.py  ingestion.py  retrieval.py  storage.py
backend/src/raglearn/cost/: __init__.py  local.py
backend/src/raglearn/eval/: __init__.py
backend/src/raglearn/generation/: __init__.py
backend/src/raglearn/harness/: __init__.py
backend/src/raglearn/ingestion/: __init__.py  bundle.py  consumer.py  detect.py  docling_backend.py  events.py  object_store.py  parsers.py  router.py  xbrl_extract.py
backend/src/raglearn/ingestion/chunking/: __init__.py  assemble.py  context.py  fixed.py  gate.py  metrics.py  parse.py  pdf_structure.py  recursive.py  router.py  sec_html.py  semantic.py  structure.py  tokenizer.py
backend/src/raglearn/observability/: __init__.py
backend/src/raglearn/retrieval/: __init__.py
backend/src/raglearn/security/: __init__.py
backend/src/raglearn/stores/: __init__.py  duckdb_structured.py
backend/tests/: conftest.py  test_api_chat.py  test_api_ingest.py  test_api_query.py  test_api_sessions.py  test_config.py  test_docling_backend.py  test_eval_harness.py  test_eval_runner.py  test_eval_synthetic.py  test_generation_ollama.py  test_generation_token_stream.py  test_harness_citation_verify.py  test_health.py  test_ingestion_chunk_assemble.py  test_ingestion_chunk_gate.py  test_ingestion_chunk_ids.py  test_ingestion_chunk_parse.py  test_ingestion_chunk_parse_rescue.py  test_ingestion_chunk_recursive.py  test_ingestion_chunk_strategies.py  test_ingestion_chunk_structure.py  test_ingestion_detect.py  test_ingestion_embed.py  test_ingestion_events.py  test_ingestion_identity.py  test_ingestion_identity_llm.py  test_ingestion_parsers.py  test_ingestion_router.py  test_ingestion_xbrl.py  test_observability_langfuse_exporter.py  test_observability_monitor_emitter.py  test_observability_redis_exporter.py  test_observability_tracer.py  test_registry.py  test_retrieval_answer.py  test_retrieval_fusing.py  test_retrieval_fusion.py  test_retrieval_lexical.py  test_retrieval_query_service.py  (+16 more)
config/: config.cloud.yaml  config.dev.yaml  config.yaml
frontend/: .gitignore  biome.json  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: finrag.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/chat/sessions/: route.ts
frontend/app/api/chat/sessions/[sessionId]/: route.ts
frontend/app/api/chat/sessions/[sessionId]/messages/: route.ts
frontend/app/api/ingestion/uploads/: route.ts
frontend/app/api/monitor/stream/: route.ts
frontend/app/chat/: page.tsx
frontend/app/chat/[sessionId]/: page.tsx
frontend/app/chats/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/monitor/: page.tsx
frontend/app/monitor/[uploadId]/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: AppShell.tsx  ThemeProvider.tsx
frontend/components/chat/: AgentTrace.tsx  Answer.tsx  ChatView.tsx  Composer.tsx  GroundingBadge.tsx  SafetyNote.tsx  SourceViewer.tsx  SourcesList.tsx  Turn.tsx
frontend/components/documents/: CorpusList.tsx  DocumentsView.tsx  UploadZone.tsx
frontend/components/monitor/: DocTrace.tsx  MiniDag.tsx  MonitorView.tsx  UploadCard.tsx  UploadDetail.tsx  UploadRow.tsx
frontend/hooks/: useChat.ts  useMonitor.ts  useSessions.ts  useUpload.ts  useUploads.ts
frontend/lib/: chat-prompts.ts  chat-types.ts  corpus-types.ts  dropzone.ts  ingest-types.ts  monitor-types.ts  monitor.ts  sse.ts
infra/: compose.langfuse.yaml  compose.yaml
infra/docker/: Dockerfile.api
infra/minio/: init.sh
