[project]
name = "raglearn"
version = "0.1.0"
description = "Agentic RAG over financial filings with exact-figure and narrative retrieval."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "aiokafka>=0.14.0",
    "minio>=7.2.20",
    "httpx>=0.27",
    "docling>=2.97.0",
    "arelle-release>=2.41.4",
    "onnxruntime>=1.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raglearn"]

# ── Lint + format ────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F=pyflakes+pycodestyle, I=isort, N=pep8-naming, UP=pyupgrade,
# B=bugbear, D=pydocstyle, ANN=annotations, RUF=ruff-specific.
select = ["E", "F", "I", "N", "UP", "B", "D", "ANN", "RUF"]
ignore = ["D203", "D213", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]
"**/__init__.py" = ["D104"]

# ── Types ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["raglearn"]

# aiokafka ships no type information.
[[tool.mypy.overrides]]
module = ["aiokafka.*"]
ignore_missing_imports = true

# Docling ships partial types but does not re-export every public name.
[[tool.mypy.overrides]]
module = ["docling.*", "docling_core.*"]
ignore_missing_imports = true
implicit_reexport = true

# Arelle ships no type information.
[[tool.mypy.overrides]]
module = ["arelle.*"]
ignore_missing_imports = true

# RapidOCR ships no type information.
[[tool.mypy.overrides]]
module = ["rapidocr.*"]
ignore_missing_imports = true

# ── Tests ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
