[project]
name = "finrag"
version = "0.1.0"
description = "Agentic RAG over financial filings with exact-figure and narrative retrieval."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "aiokafka>=0.14.0",
    "minio>=7.2.20",
    "httpx>=0.27",
    "docling>=2.97.0",
    "arelle-release>=2.41.4",
    "onnxruntime>=1.26.0",
    "duckdb>=1.1.0",
    "psycopg[binary,pool]>=3.2",
    "sec-parser>=0.58.1",
    "FlagEmbedding>=1.3",
    # transformers 5.x dropped the import path FlagEmbedding 1.4 relies on
    # (`from transformers import TrainingArguments`), so cap below 5.
    "transformers>=4.44,<5",
    "torch>=2.2",
    # Pin torchvision alongside torch and route it through the same CPU index
    # (below) — a mismatched build raises `torchvision::nms does not exist`.
    "torchvision>=0.17",
    "qdrant-client>=1.12",
    "pypdfium2>=4",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "rank-bm25>=0.2.2",
    "sqlglot>=30.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finrag"]

# ── Dependency sources ────────────────────────────────────────────────────────
# torch pulls CUDA libraries by default; pin it to the CPU-only wheel on
# Linux/Windows (the Docker/CI target) to keep the image lean. macOS wheels are
# already CPU/MPS, so leave Darwin on the default PyPI index.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system != 'Darwin'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system != 'Darwin'" }]

# ── Lint + format ────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F=pyflakes+pycodestyle, I=isort, N=pep8-naming, UP=pyupgrade,
# B=bugbear, D=pydocstyle, ANN=annotations, RUF=ruff-specific.
select = ["E", "F", "I", "N", "UP", "B", "D", "ANN", "RUF"]
ignore = ["D203", "D213", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]
"**/__init__.py" = ["D104"]

# ── Types ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["finrag"]

# aiokafka ships no type information.
[[tool.mypy.overrides]]
module = ["aiokafka.*"]
ignore_missing_imports = true

# Docling ships partial types but does not re-export every public name.
[[tool.mypy.overrides]]
module = ["docling.*", "docling_core.*"]
ignore_missing_imports = true
implicit_reexport = true

# Arelle ships no type information.
[[tool.mypy.overrides]]
module = ["arelle.*"]
ignore_missing_imports = true

# RapidOCR ships no type information.
[[tool.mypy.overrides]]
module = ["rapidocr.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sec_parser.*", "pandas.*"]
ignore_missing_imports = true

# FlagEmbedding ships no type information.
[[tool.mypy.overrides]]
module = ["FlagEmbedding.*"]
ignore_missing_imports = true

# qdrant-client's models are not fully typed for our usage.
[[tool.mypy.overrides]]
module = ["qdrant_client.*"]
ignore_missing_imports = true

# pypdfium2 ships no type information.
[[tool.mypy.overrides]]
module = ["pypdfium2.*"]
ignore_missing_imports = true

# torch's public API is not fully typed for our usage.
[[tool.mypy.overrides]]
module = ["torch.*"]
ignore_missing_imports = true

# rank_bm25 ships no type stubs.
[[tool.mypy.overrides]]
module = ["rank_bm25.*"]
ignore_missing_imports = true

# ── Tests ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
